<resources>
    <string name="app_name">Vehicle Profiling</string>

    <!-- Destination labels -->
    <string name="vehicle_list_fragment">Vehicles</string>
    <string name="vehicle_profile_fragment">Vehicle Profile</string>
    <string name="new_vehicle_fragment">Create new vehicle profile</string>
    <string name="vehicle_class_fragment">Select vehicle class</string>
    <string name="vehicle_make_fragment">Select Make</string>
    <string name="vehicle_model_fragment">Select Model</string>
    <string name="vehicle_fuel_type_fragment">Select Fuel Type</string>
    <string name="vehicle_transmission_fragment">Select Transmission</string>


    <string name="next_button_desc">Next Button</string>
    <string name="vehicle_number_label">Vehicle Number</string>
    <string name="hint_enter_vehicle_number">Enter Vehicle Registration Number</string>
    <string name="error_enter_vehicle_number">Please input vehicle registration number</string>
    <string name="create_profile_button_desc">Create Profile Button</string>
    <string name="no_profile_found">No Vehicle Profiles found.\nPlease add a new one.</string>

    <string name="make_label">Make</string>
    <string name="model_label">Model</string>
    <string name="fuel_type_label">Fuel Type</string>
    <string name="transmission_label">Transmission</string>
    <string name="forward_arrow_desc">Forward Arrow</string>
</resources>