<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.create.registration.NewVehicleFragment">

    <TextView
        android:id="@+id/registrationNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        android:text="@string/vehicle_number_label"
        android:textAllCaps="true"
        />


    <EditText
        android:id="@+id/registrationNumberInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"

        app:layout_constraintTop_toBottomOf="@id/registrationNumberLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        android:padding="8dp"

        android:background="@drawable/edit_text_border"

        style="@style/TextAppearance.MaterialComponents.Body1"

        android:hint="@string/hint_enter_vehicle_number"
        android:textAllCaps="true"
        android:inputType="text"
        android:autofillHints="vehicleNumber"
        android:imeOptions="actionDone"
        tools:ignore="TextFields" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_chevron_right_24"

        app:fabSize="auto"
        app:maxImageSize="32dp"
        app:tint="@color/white"
        app:backgroundTint="?attr/colorPrimary"

        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/next_button_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>